@@ -1,3 +1,10 @@
+Mon Oct  7 22:52:16 2013  Akinori MUSHA  <knu@iDaemons.org>
+
+	* misc/ruby-additional.el: Use preceding-char/following-char
+	  (returning 0 at BOF/EOF) instead of char-before/char-after
+	  (returning nil at BOF/EOF) to avoid error from char-syntax when
+	  at BOF/EOF.
+
 Mon Oct  7 22:45:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* cont.c (FIBER_USE_NATIVE): split long conditions.
